[package]
name = "sss-rs"
version = "0.11.0"
authors = ["ppoliani"]
edition = "2021"
description = "A secret sharing scheme implemented in Rust"
repository = "https://github.com/ticketland-io/sss-rs"
categories = ["cryptography"]
license = "MIT"
readme = "README.md"

[badges]
travis-ci = { repository = "https://travis-ci.com/bilowik/sss-rs", branch = "master" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "^0.8.5"
lazy_static = "^1.3.0"
num-traits = "0.2.8"
sha3 = "^0.10.6"
rand_chacha = "^0.3.1"
hex = "^0.4.3"
galois_2p8 = "^0.1.2"

[dev-dependencies]
blake3 = "1.3"
hex = "0.4"
